# SISE_ULTIMATE_GAMES

./: .env.example  .gitignore  README.md  analysis_shooter.py  main.py  pyproject.toml  requirements.txt  test.py  test_controller.py
app/: app.py
core/: agent.py  controller.py  llm_summary.py  llm_summary_old.py  recorder.py  supabase_client.py
data/: sessions.csv  synthetic_sessions_500.csv
games/: base_game.py  labyrinth_game.py  racing_game.py  shooter_game.py
