[project]
name = "sise-ultimate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash==2.17.1",
    "dotenv>=0.9.9",
    "matplotlib>=3.7.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "plotly==5.22.0",
    "pygame==2.6.1",
    "scikit-learn==1.4.2",
    "streamlit>=1.32.0",
    "supabase>=2.28.0",
    "umap-learn==0.5.6",
]
